--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-crossbeam-epoch = "^0.9.0"
-crossbeam-queue = "^0.3.0"
+crossbeam-epoch = "0.9"
+crossbeam-queue = "0.3"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
+
+[target.'cfg(loom)'.dependencies]
+loom = "0.7"
