work at the soundness hole a bit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-crossbeam-epoch = "0.9"
-crossbeam-queue = "0.3"
+#crossbeam-epoch = "0.9"
+#crossbeam-queue = "0.3"
+crossbeam-epoch = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
+crossbeam-queue = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
+
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
