--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+    - uses: extractions/setup-just@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        components: miri
+        override: true
     - name: Test
       run: just test
